[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/godot-xr-tools/xr/start_xr.gd" type="Script" id=1]

[node name="StartXR" type="Node"]
script = ExtResource( 1 )

[node name="EnterWebXR" type="CanvasLayer" parent="."]
visible = false

[node name="EnterVRButton" type="Button" parent="EnterWebXR"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -52.5
margin_right = 132.0
margin_bottom = 52.5
text = "Enter VR"

[connection signal="pressed" from="EnterWebXR/EnterVRButton" to="." method="_on_enter_webxr_button_pressed"]
